crates/die/src/snapshots/die__test__kh.snap
---
source: crates/die/src/lib.rs
expression: "e(Die::of_count_base(3, 6), \"prob\", next_state)"
---
[
    (
        Number(
            3,
        ),
        1/216,
    ),
    (
        Number(
            4,
        ),
        1/72,
    ),
    (
        Number(
            5,
        ),
        1/36,
    ),
    (
        Number(
            6,
        ),
        5/108,
    ),
    (
        Number(
            7,
        ),
        5/72,
    ),
    (
        Number(
            8,
        ),
        7/72,
    ),
    (
        Number(
            9,
        ),
        25/216,
    ),
    (
        Number(
            10,
        ),
        1/8,
    ),
    (
        Number(
            11,
        ),
        1/8,
    ),
    (
        Number(
            12,
        ),
        25/216,
    ),
    (
        Number(
            13,
        ),
        7/72,
    ),
    (
        Number(
            14,
        ),
        5/72,
    ),
    (
        Number(
            15,
        ),
        5/108,
    ),
    (
        Number(
            16,
        ),
        1/36,
    ),
    (
        Number(
            17,
        ),
        1/72,
    ),
    (
        Number(
            18,
        ),
        1/216,
    ),
]

