crates/die/src/snapshots/die__test__test.snap
---
source: crates/die/src/lib.rs
expression: "e(die, next_state)"
---
[
    (
        Number(
            8,
        ),
        1/65536,
    ),
    (
        Number(
            9,
        ),
        1/8192,
    ),
    (
        Number(
            10,
        ),
        9/16384,
    ),
    (
        Number(
            11,
        ),
        15/8192,
    ),
    (
        Number(
            12,
        ),
        161/32768,
    ),
    (
        Number(
            13,
        ),
        91/8192,
    ),
    (
        Number(
            14,
        ),
        357/16384,
    ),
    (
        Number(
            15,
        ),
        309/8192,
    ),
    (
        Number(
            16,
        ),
        3823/65536,
    ),
    (
        Number(
            17,
        ),
        333/4096,
    ),
    (
        Number(
            18,
        ),
        841/8192,
    ),
    (
        Number(
            19,
        ),
        483/4096,
    ),
    (
        Number(
            20,
        ),
        2023/16384,
    ),
    (
        Number(
            21,
        ),
        483/4096,
    ),
    (
        Number(
            22,
        ),
        841/8192,
    ),
    (
        Number(
            23,
        ),
        333/4096,
    ),
    (
        Number(
            24,
        ),
        3823/65536,
    ),
    (
        Number(
            25,
        ),
        309/8192,
    ),
    (
        Number(
            26,
        ),
        357/16384,
    ),
    (
        Number(
            27,
        ),
        91/8192,
    ),
    (
        Number(
            28,
        ),
        161/32768,
    ),
    (
        Number(
            29,
        ),
        15/8192,
    ),
    (
        Number(
            30,
        ),
        9/16384,
    ),
    (
        Number(
            31,
        ),
        1/8192,
    ),
    (
        Number(
            32,
        ),
        1/65536,
    ),
]

