crates/die/src/snapshots/die__test__tester.snap
---
source: crates/die/src/lib.rs
expression: "e(Die::of_count_base(1, 20), next_state)"
---
[
    (
        Number(
            1,
        ),
        1,
    ),
]

